How it feels to waste hours on the limelight cooking our loop timings